edition = "2023";

package proto.stack.v1;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/endobit/gen/go/proto/stack/v1;stackv1";



//
// Create
//

message CreateRackRequest {
  string zone = 1;
  string name = 2;
}

//
// Read
//

message ReadRacksRequest {
  string zone = 1;
  oneof rack {
	string name = 2;
	string glob = 3;
  }
}

message ReadRacksResponse {
  string zone = 1;
  string name = 2;
}

//
// Update
//

message UpdateRackRequest {
  message Fields {
	string name = 1;
  }

  string zone = 1;
  string name = 2;
  Fields fields = 3;
}

//
// Delete
//

message DeleteRacksRequest {
  string zone = 1;
  oneof rack {
	string name = 2;
	string glob = 3;
  }
}




//
// Create
//

message CreateRackAttrRequest {
  string zone = 1;
  string rack = 2;
  string name = 3;
}

//
// Read
//

message ReadRackAttrsRequest {
  string zone = 1;
  string rack = 2;
  oneof attr {
    string name = 3;
    string glob = 4;
  }
}

message ReadRackAttrsResponse {
  string zone = 1;
  string rack = 2;
  string name = 3;
  string value = 4;
  bool protected = 5;
}

//
// Update
//

message UpdateRackAttrRequest {
  message Fields {
    string name = 1;
    string value = 2;
    bool protected = 3;
  }

  string zone = 1;
  string rack = 2;
  string name = 3;
  Fields fields = 4;
}

//
// Delete
//

message DeleteRackAttrsRequest {
  string zone = 1;
  string rack = 2;
  oneof attr {
    string name = 3;
    string glob = 4;
  }
}



